# sleep-recommendation-system

./: .gitignore  README.md  SETUP.md  setup.bat  setup.ps1  start.bat
backend/: .env.example  README.md  main.py  pyproject.toml  run_tests.py
backend/scripts/: encode_dataset.py
backend/src/api/: __init__.py  app.py  experiment.py  music.py  pipeline.py  recommendations.py
backend/src/nodes/: __init__.py  emotion_recognition.py  llm_utils.py  preference_analysis.py  prompt_generation.py  requirement_integration.py  state_analysis.py
backend/src/pipeline/: __init__.py  recommendation_pipeline.py
backend/src/service/: __init__.py  experiment_service.py  music_generation.py  recommendation_service.py
backend/src/state/: __init__.py  form_data.py  recommendation_state.py
backend/src/utils/: __init__.py  encode_audio.py  vector_search.py
backend/tests/: __init__.py  test_api.py  test_pipeline.py
docs/: FormDesign.md  LangGraphGuild.md  RecommendationSystem.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ABTestInterface.tsx  SleepRecommendationForm.tsx
frontend/src/components/form-sections/: GoalsSection.tsx  PersonalizationSection.tsx  PhysiologicalSection.tsx  PreferencesSection.tsx  SensitivitiesSection.tsx
frontend/src/pages/: ABTestPage.tsx  HomePage.tsx  RecommendationsPage.tsx
frontend/src/services/: api.ts  audio.ts
frontend/src/types/: api.ts  form.ts
src/utils/: __init__.py  encode_audio.py
